--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 MONGODBURL="mongodb+srv://singlarinki13:vlscuRPFcVSze3f3@cluster0.yufeqnb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 DB_NAME ="Rinki"
+ACCESS_TOKEN_SECRET=youraccesstokensecret
+REFRESH_TOKEN_SECRET=yourrefreshtokensecret
+AccessTokenExpireIn=15m
+RefreshTokenExpireIn=7d
